--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Translator</title>
-    <link rel="icon" type="image/png" href="../img/cypher-logo.png" />
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/landing.css">
+    <link rel="icon" type="image/png" href="./img/cypher-logo.png" />
+    <link rel="stylesheet" href="./dist/css/main.css">
+    <link rel="stylesheet" href="./dist/css/landing.css">
 </head>
 
 <body>
@@ -117,12 +117,12 @@
             </div>
             <div class="center-content-container">
                 <div class="logo-container">
-                    <img src="../img/cypher-logo.png">
+                    <img src="./img/cypher-logo.png">
                     <h1 class="cypher-brandname">Cypher</h1>
                 </div>
                 <div class="subtext">Universal Translation for Every Programmer</div>
                 <a class="btn" data-bs-toggle="popover" data-bs-placement="bottom"
-                    data-bs-content="This doesn't do anything">Begin Translating <img src="../img/btnarrow.svg"></a>
+                    data-bs-content="This doesn't do anything">Begin Translating <img src="./img/btnarrow.svg"></a>
             </div>
             <div class="tab-content" id="pills-tabContent-right">
                 <div class="tab-pane pane-html active">
@@ -270,7 +270,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
-    <script src="../js/tab.js"></script>
+    <script src="./js/tab.js"></script>
 
 </body>
 
